# options-pricing-engine

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench.cpp
python/: example.py  greeks_viz.py  implied_vol.py  iv_surface.py  volatility_smile.py
src/: batch_pricer.cpp  batch_pricer.hpp  bindings.cpp  black_scholes.cpp  black_scholes.hpp
tests/: test_pricing.cpp
